# anzen

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
anzen/: __init__.py  cli.py  client.py  config.py  events.py  exceptions.py  tracker.py
anzen/guards/: __init__.py  prompt.py  rag.py  tool.py
anzen/integrations/: __init__.py  _base.py  anthropic.py  azure_openai.py  cohere.py  gemini.py  groq.py  langchain.py  llamaindex.py  mistral.py  ollama.py  openai.py
anzen/server/: __init__.py  app.py  auth.py  config.py  database.py  ws_manager.py
anzen/server/routers/: events.py  health.py  sessions.py  stats.py  websocket.py
examples/: .env.example  example_anthropic.py  example_cohere.py  example_gemini.py  example_groq.py  example_mistral.py  example_ollama.py  example_openai.py
tests/: test_anzen.py
ui/frontend/: index.html  package-lock.json  package.json  vite.config.js
ui/frontend/src/: App.jsx
